--- a/packages/inspector/package.json
+++ b/packages/inspector/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev:local-servers": "npx @modelcontextprotocol/inspector"
+    "inspector": "npx @modelcontextprotocol/inspector"
   },
   "devDependencies": {
     "cross-env": "^7.0.3"
