--- a/turbo.json
+++ b/turbo.json
@@ -10,6 +10,10 @@
       "persistent": true,
       "dependsOn": ["^build"]
     },
+    "inspector": {
+      "cache": false,
+      "persistent": true
+    },
     "dev:stdio:setup-config": {
       "cache": false,
       "persistent": true,
