main app hits gpt with ngrok local mcp server

--- a/apps/main-app/.env.example
+++ b/apps/main-app/.env.example
@@ -1,3 +1,27 @@
-NEXT_PUBLIC_PROJECT_ID=imp-sandbox-4ac146
-NEXT_PUBLIC_WORLD_ID=ally-test-7ebbe6
-OPENAI_API_KEY=your-openai-api-key-here
+# MML MCP Main App Environment Variables
+
+# Required: Your OpenAI API key for chat integration
+# Get this from: https://platform.openai.com/api-keys
+OPENAI_API_KEY=sk-your-openai-key-here
+
+# Required: Your ngrok URL for MCP server access
+# This should be set to your public ngrok URL (without /api/mcp)
+# Example: https://abc123.ngrok-free.app
+# Use ./update-ngrok-url.sh to set this automatically
+MCP_SERVER_URL=https://your-ngrok-url.ngrok-free.app
+
+# Optional: Custom ports for MCP service dependencies
+# These are the default values if not specified
+MML_SERVER_URL=http://localhost:8001
+WEB_WORLD_SERVER_URL=http://localhost:8002
+VIEWER_SERVER_PORT=8003
+
+# MServer env Variables
+NEXT_PUBLIC_PROJECT_ID=asdf-ghjk-1234
+NEXT_PUBLIC_WORLD_ID=qwer-tyui-5678
+
+# Instructions:
+# 1. Copy this file to .env.local: cp .env.example .env.local
+# 2. Set your OPENAI_API_KEY
+# 3. Start ngrok and run ./update-ngrok-url.sh to set MCP_SERVER_URL
+# 4. Restart your Next.js server: npm run dev
