--- a/apps/main-app/package.json
+++ b/apps/main-app/package.json
@@ -20,12 +20,21 @@
     "openai": "^5.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "@mml-mcp/mcp-server": "*",
+    "@mml-mcp/mml-client": "*",
+    "@mml-mcp/web-world-client": "*",
+    "@mml-mcp/viewer": "*",
+    "@mml-mcp/shared": "*",
+    "@modelcontextprotocol/sdk": "^1.12.0",
+    "express": "^4.18.2",
+    "zod": "^3.25.48"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@types/express": "^4.17.17",
     "autoprefixer": "^10.4.21",
     "eslint": "^8.0.0",
     "eslint-config-next": "14.0.0",
